# pico-calculator

./: CMakeLists.txt  README.md  main.c  pico-calc-i2c int  pico_calc.S
